# 3dmodel-to-minecraft

./: .gitignore  README.md  TODO.md
cpp/: AGENTS.md  BUILDING.md  CMakeLists.txt  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  VERSION.txt  build.ps1  main.cpp  package-release.ps1
cpp/app/: cli_args.cpp  cli_args.h
cpp/native/: glb_surface_importer.cpp  glb_surface_importer.h  glb_textured_importer.cpp  glb_textured_importer.h  nbt.cpp  nbt.h  obj_textured_importer.cpp  obj_textured_importer.h  palette.cpp  palette.h  preview_cache.cpp  preview_cache.h  preview_d3d11_renderer.cpp  preview_d3d11_renderer.h  preview_d3d12_renderer.cpp  preview_d3d12_renderer.h  preview_directstorage.cpp  preview_directstorage.h  preview_gpu_lod.cpp  preview_gpu_lod.h  preview_gpu_lod_d3d12.cpp  preview_gpu_lod_d3d12.h  preview_gpu_lod_dispatch.cpp  preview_mesh.cpp  preview_mesh.h  preview_renderer.cpp  preview_renderer.h  preview_vulkan_renderer.cpp  preview_vulkan_renderer.h  preview_vulkan_renderer.hlsl  preview_vulkan_shaders.generated.h  world_ops.cpp  world_ops.h
cpp/tests/: README.md
cpp/tests/benchmarks/: README.md  meshoptimizer_eval.cpp
cpp/tests/probes/: d3d11_renderer_probe.cpp  d3d12_lod_smoke.cpp  gpu_tile_quality_probe.cpp  preview_cache_pipeline_probe.cpp  renderer_adapter_probe.cpp  vulkan_renderer_smoke.cpp
cpp/tools/atlas-26.2/: README.md  debug_faces.py  gen_cpp_vendor_atlas.py
